# uraha-m1

./: .env.example  .gitignore  README.md  pyproject.toml  wsgi.py
app/: __init__.py  config.py  models.py  validators.py
app/core/: contracts.py  simulator.py
app/storage/: db.py  repository.py
app/templates/: base.html  boundary_form.html  boundary_result.html  home.html
app/templates/issues/: index.html  new.html
app/templates/steps/: index.html  show.html
app/templates_def/: boundary.py
app/web/: routes_boundary.py  routes_steps.py
